<resources>
    <string name="app_name">Clicker</string>
    <string name="zero">0</string>
    <string name="gold_amount">Gold 0</string>
    <string name="gold_per_s">Gold / s</string>
    <string name="up1_label">+1 on click</string>
    <string name="up2_label">+1/s</string>
    <string name="up3_label">+2/s</string>
    <string name="click">Click</string>
    <string name="up4_label">+4/s</string>
    <string name="up5_label">+10/s</string>
    <string name="up6_label">+60/s</string>

    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
</resources>